# latex_view

./: .gitignore
back/: back.cabal
back/src/: Main.hs
back/src/Compiler/: Detokenizer.hs  LatexCompiler.hs
back/src/Parsers/: FileReader.hs  LatexTokens.hs  ParseLatex.hs
front/src/: App.js
