name:                back
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/back#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable back
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       wai-cors >=0.2.7 && <3,
                       scotty >=0.11.6 && <0.12,
                       megaparsec,
                       text,
                       directory,
                       aeson

